UPdated media queries, contact page. Mobile doesnt look out of place but needs some fixes. Need to create form, add hamburger menu and then update images

--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,11 @@
   --teamPaddingTopBot: 7.5rem;
   --largePicMargin: 2rem;
   --largePicFlex: 1.5;
-  --contentWidth: 7rem;
+  --contentPadding: 7rem;
   --minPadding: 5rem;
   --textContainerMax: 900px;
   --customerLogoWidth: 22rem;
+  --commonPageHeaderHeight: 420px;
 }
 
 * {
@@ -79,7 +80,7 @@ p,
 }
 
 .chunkMinHeight {
-  min-height: calc(100vw*9/16);
+  min-height: calc(100vw*8/16);
 }
 
 html,
@@ -104,7 +105,6 @@ body {
   padding-left: calc(100vw - 100%);
   max-width: 100%;
   height: var(--headerHeight);
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
   background-color: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(0.7rem);
 }
@@ -214,7 +214,7 @@ body {
 }
 
 #customerContainer {
-  padding: var(--customerPaddingTopBot) var(--contentWidth);
+  padding: 0 var(--contentWidth);
   position: relative;
 }
 #customerContainer #customerContent {
@@ -240,6 +240,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  padding: var(--customerPaddingTopBot) 0;
   overflow: hidden;
   position: relative;
 }
@@ -279,12 +280,12 @@ body {
 }
 
 #servicesChunk {
-  padding: var(--servicesPaddingTopBot) calc(var(--contentWidth)/2);
+  padding: var(--servicesPaddingTopBot) calc(var(--contentPadding)/2);
 }
 #servicesChunk #servicesChunkCard {
   height: 100%;
   width: 100%;
-  padding: var(--minPadding) calc(var(--contentWidth)/2);
+  padding: calc(var(--contentPadding)/2);
   border-radius: 1rem;
   display: flex;
   flex-direction: row;
@@ -451,28 +452,24 @@ body {
 }
 
 #contactMain {
-  padding: 10rem 0 0 5rem;
-  position: relative;
+  padding-top: var(--headerHeight);
+  display: flex;
+  flex-direction: row;
 }
 #contactMain hgroup {
-  position: relative;
-  z-index: 100;
   background-color: #008c15;
-  width: fit-content;
   padding: 3rem;
+  width: 40vw;
 }
 #contactMain hgroup a {
   text-decoration: dotted underline;
 }
 #contactMain hgroup * {
   color: #fff;
+  padding: 0.15rem;
 }
 #contactMain #map {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  flex: 2;
 }
 
 #hoursFlex {
@@ -489,7 +486,7 @@ body {
 
 .pageHeader {
   position: relative;
-  height: 420px;
+  height: var(--commonPageHeaderHeight);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -501,6 +498,7 @@ body {
   font-size: calc(var(--h1size)*1.5);
   margin-bottom: 0rem;
   padding-top: 3rem;
+  text-shadow: 1px 1px 2px #000;
 }
 
 #engineeringHeader {
@@ -514,7 +512,7 @@ body {
 
 .pageSection {
   background-color: white;
-  padding: 9rem var(--minPadding);
+  padding: calc(var(--minPadding)*1.75) var(--minPadding);
 }
 .pageSection * {
   max-width: var(--textContainerMax);
@@ -529,21 +527,22 @@ body {
 
 .contentList {
   background-color: white;
-  width: 100%;
+  width: inherit;
   padding-bottom: 5rem;
 }
 .contentList .contentContainer {
+  width: inherit;
   display: flex;
   padding-left: calc((100% - (var(--textContainerMax)))/2);
-  height: 500px;
+  height: 475px;
   margin-bottom: 2rem;
-  width: 100%;
 }
 .contentList .contentContainer hgroup {
-  width: calc((var(--textContainerMax)/2) - 1rem);
+  flex: 0 0 calc((var(--textContainerMax)/2) - 1rem);
   padding: 0 var(--minPadding);
   margin-right: 1rem;
   border-radius: 0.5rem;
+  border: 1px solid #f0eeee;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -559,9 +558,12 @@ body {
 }
 .contentList .contentContainer img {
   flex: 1;
+  width: 100%;
+  height: 100%;
   margin-left: 1rem;
   object-fit: cover;
-  border-radius: 0.5rem;
+  border-radius: 0.5rem 0 0 0.5rem;
+  min-width: 0;
 }
 .contentList .contentContainer:nth-child(even) {
   flex-direction: row-reverse;
@@ -575,6 +577,7 @@ body {
 .contentList .contentContainer:nth-child(even) img {
   margin-right: 1rem;
   margin-left: 0;
+  border-radius: 0 0.5rem 0.5rem 0;
 }
 
 #footer {
@@ -583,8 +586,9 @@ body {
   display: flex;
   flex-direction: row;
   padding: 3rem var(--minPadding);
-  background-color: #edeeef;
+  background-color: #f7f7f7;
   justify-content: center;
+  border-radius: 1.5rem 1.5rem 0 0;
 }
 #footer ul {
   list-style: none;
@@ -673,15 +677,18 @@ body {
   }
 }
 @media (max-width: 1280px) {
+  :root {
+    --logoContainerHeight: 5rem;
+  }
+
   .chunkMinHeight {
     min-height: 800px;
   }
 }
 @media (max-width: 1150px) {
   :root {
-    --minPadding: 2.5rem;
-    --contentWidth: 5rem;
-    --serviceCardPadding: 1.7rem;
+    --minPadding: 3rem;
+    --serviceCardPadding: 2rem;
     --largePicMargin: 1rem;
   }
 
@@ -694,6 +701,7 @@ body {
   #servicesChunk #servicesChunkCard #servicesContent {
     flex: 1;
     margin-bottom: 2rem;
+    margin-right: 0;
   }
   #servicesChunk #servicesChunkCard #cardFlexContainer {
     height: 100%;
@@ -701,8 +709,8 @@ body {
     flex: 2.5;
   }
   #servicesChunk #servicesChunkCard #cardFlexContainer .servicesCard {
-    margin: 0.5rem auto;
-    width: calc(50% - 1rem);
+    margin: 0.625rem;
+    width: calc(50% - 1.25rem);
   }
 
   #teamContainer1 picture {
@@ -722,16 +730,44 @@ body {
     width: 100%;
     margin: 0.5rem auto;
   }
+
+  .pageSection {
+    padding: calc(var(--minPadding)*2.25) var(--minPadding);
+  }
+
+  .pageHeader h1 {
+    font-size: calc(var(--h1size)*1.25);
+  }
 }
 @media (max-width: 900px) {
   * {
     font-size: 10px;
     --logoContainerHeight: 6rem;
     --servicesPaddingTopBot: 3rem;
+    --textContainerMax: 90vw;
+    --commonPageHeaderHeight: 360px;
   }
 
   :root {
     --largePicFlex: 1;
+  }
+
+  .contentList .contentContainer {
+    height: 375px;
+  }
+  .contentList .contentContainer hgroup {
+    padding: 0 calc(var(--minPadding)*2);
+  }
+  .contentList .contentContainer:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+  .contentList .contentContainer:nth-child(even) hgroup {
+    margin-left: 1rem;
+    margin-right: 0;
+  }
+  .contentList .contentContainer:nth-child(even) img {
+    margin-right: 1rem;
+    margin-left: 0;
   }
 }
 @media (max-width: 750px) {
@@ -739,15 +775,38 @@ body {
     --customerPaddingTopBot: 12rem;
     --servicesPaddingTopBot: 2rem;
     --teamPaddingTopBot: 7.5rem;
+    --serviceCardPadding: 3rem;
   }
 
   .chunk {
     max-height: none;
   }
+
+  #servicesChunk #servicesChunkCard #cardFlexContainer .servicesCard {
+    width: calc(100%);
+    border-radius: 0.5rem;
+    margin: 1rem auto;
+    min-height: calc(100vw/2.2);
+  }
 }
 @media (max-width: 600px) {
-  .chunk {
-    max-height: none;
+  * {
+    font-size: 8px;
+    --contentPadding: 3.7rem;
+    --commonPageHeaderHeight: 250px;
+  }
+
+  #mainPage #helloContent {
+    text-align: center;
+  }
+
+  #servicesChunk {
+    padding: 0 0;
+    background-color: #f7f7f7;
+  }
+  #servicesChunk #servicesChunkCard {
+    padding: var(--contentPadding);
+    box-shadow: none;
   }
 }
 
